<resources>
    <string name="app_name">Ecquo Planner</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="open_button_container">Open</string>
    <string name="close_button_container">Close</string>


    <string name="pref_title_stick_container">Stick layer to</string>
    <string name="pref_title_transformer">Transformer</string>
    <string name="pref_title_enable_preview_mode">Enable preview mode</string>
    <string name="pref_title_show_shadow">Show shadow</string>
    <string name="pref_title_show_offset">Closed offset</string>

    <string name="swipe_label">Swipe!</string>
    <string name="swipe_left_label">Swipe left!</string>
    <string name="swipe_right_label">Swipe right!</string>
    <string name="swipe_up_label">Swipe up!</string>
    <string name="swipe_down_label">Swipe down!</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hit your goals!</string>
    <string name="quick_note">Quick Note</string>
    <string name="motivational_text">Conquer your Day!</string>
    <string name="userName">Ecquo User</string>
    <string name="openDrawer">Ecquo</string>
    <string name="closeDrawer">Ecquo</string>


    <string name="goal_title_hint">New Goal</string>
    <string name="note_title_label">Title</string>
    <string name="note_details_label">Priority</string>
    <string name="note_solved_label">Completed?</string>
    <string name="notes_title">Notes</string>
    <string name="today_tasks">Today\'s Tasks</string>
    <string name="title_activity_goal_list">GoalListActivity</string>
    <string name="title_activity_habit_edit">HabitEditActivity</string>


    <string name="taptoundo">Tap to undo</string>
    <string name="itemdeleted">Item Deleted</string>
    <string name="header">Header</string>
    <string name="row_number">Row Number</string>
    <string name="title_activity_task_edit">TaskEditActivity</string>
    <string name="name_task_prompt">Name Your Task</string>
    <string name="date_task_prompt"><![CDATA[Set your due date & time]]></string>
    <string name="set_your_priority">Set your Priority</string>
    <string name="tasks_empty">Add more tasks to work on today!</string>
    <string name="title_activity_edit">EditActivity</string>

    <string name="title_activity_launcher">LauncherActivity</string>

    <string name="title">Ecquo Planner</string>
    <string name="quote">“Dumb people talk about people.
 Smart people talk about ideas.”</string>
    <string name="author">-Hans</string>
    <string name="search">Search</string>
    <string name="sign_out">Sign Out</string>
    <string name="clear_search">Clear</string>
    <string name="new_task_hint">New Task</string>
    <string name="label">Label</string>
    <string name="date_picker_title">Set Due Date</string>
    <string name="time_picker_title">Set a time for this action</string>


    <string-array name="date_chooser_prompt">
        <item>Today</item>
        <item>Tomorrow</item>
        <item>Next Week</item>
        <item>Pick from Calendar</item>
    </string-array>

    <string-array name="quotes">
        <item>dumb people are dumb</item>
    </string-array>
    <string name="title_activity_task">TaskActivity</string>
    <string name="title_task_activity_list">Tasks</string>
    <string name="service_not_available">Service Not Available</string>

    <string name="autocomplete_hint">Enter place name or address</string>
    <string name="selected_place">Last Selected Place:</string>
    <string name="clear_text">Clear Text</string>
    <string name="place_details"><![CDATA[<!-- getString(String, Object...) does not support HTML tags directly, they need to be encoded first.     Original string: <b>%1$s</b><br/><i>Place Id: %2$s</i><br/>Address: %3$s<br/>Phone: %4$s<br/>Website: %5$s-->     <string name=\"place_details\">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s</string>]]></string>


</resources>
