<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ff114181"
    >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="309dp"
        android:layout_height="320dp"

        android:layout_gravity="center"
        android:src="@drawable/ecquo_launcher2"
        />
    <TextView
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="30sp"
        android:text="@string/title"
        android:textColor="#ffffff" />
    <TextView
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/quote"
        android:textColor="#ffffff" />
    <TextView
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:text="@string/author"
        android:textColor="#ffffff" />


</LinearLayout>