<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="4dp"
            >
            <ImageView android:id="@+id/note_imageView"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerInside"
                android:background="@android:color/darker_gray"
                android:cropToPadding="true"/>
            <ImageButton android:id="@+id/camButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_camera"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">





            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText android:id="@+id/edit_task_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="16dp"
                        android:hint="@string/goal_title_hint"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="0dp"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="0dp" />


                </android.support.design.widget.TextInputLayout>


                <ImageButton
                    style="@style/Item.Path"
                    android:id="@+id/btn_speak_now"
                    android:onClick="onClick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_btn_speak_now"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note_details_label"
        style="?android:listSeparatorTextViewStyle"
        />



    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <ImageButton
            android:id="@+id/remindMeButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:src="@android:drawable/ic_menu_today"
            android:layout_gravity="right"/>

        <RatingBar
            android:stepSize="22.0"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_gravity="center|center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ratingBar"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />


    </LinearLayout>


    <com.flipboard.bottomsheet.BottomSheetLayout
        android:id="@+id/bottomsheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/root"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

    </com.flipboard.bottomsheet.BottomSheetLayout>

    <com.wunderlist.slidinglayer.SlidingLayer
        android:id="@+id/slidingLayer"
        android:layout_width="@dimen/layer_size"
        android:layout_height="fill_parent"
        android:layout_below="@+id/toolbar"
        android:elevation="2dip">
        <!--slidingLayer:shadowDrawable="@drawable/sidebar_shadow"
        slidingLayer:shadowSize="@dimen/shadow_size"
        slidingLayer:offsetDistance="@dimen/offset_distance"
        slidingLayer:previewOffsetDistance="@dimen/preview_offset_distance"
        slidingLayer:stickTo="top|bottom|right|left"
        slidingLayer:changeStateOnTap="true">-->


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/primary_light">


            <TextView
                android:id="@+id/swipeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:drawablePadding="15dip"
                android:paddingBottom="80dp"
                android:textSize="17sp"
                android:textColor="@color/colorPrimary"/>


            <Button
                android:id="@+id/buttonClose"
                style="@style/ButtonRed"
                android:onClick="buttonClicked"
                android:layout_marginBottom="60dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/close_button_container"/>


        </RelativeLayout>


    </com.wunderlist.slidinglayer.SlidingLayer>
    </LinearLayout>